fixed div overflowing out of the document

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -231,8 +231,8 @@ background-color: black;
   border: 6px solid white;
   background-color: lightgrey;
   font-family: 'Dosis', sans-serif;
-  font-size: 11px;
-  /*overflow-y: auto;*/
+  font-size: 16px;
+  overflow-y: auto;
 }
 
 .word-wrap {
